[package]
version = "0.1.0"
name = "seed-spreadsheet"
repository = "https://github.com/seed-rs/seed-quickstart"
authors = ["Anh-Dung Phan"]
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.18"

[dependencies]
seed = "0.9.2"
nom = "7.1.1"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
